--- a/source/sass/blocks/inst.scss
+++ b/source/sass/blocks/inst.scss
@@ -5,6 +5,11 @@
   & > h2 {
     @include text(34px, 44px, 700);
     letter-spacing: 0.03em;
+    margin-bottom: 24px;
+
+    @media (max-width: $desktop-width) {
+      margin-bottom: 19px;
+    }
   }
 
   & > a {
@@ -19,9 +24,9 @@
 .inst__list {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr 1fr;
-  row-gap: 34px;
+  row-gap: 25px;
   column-gap: 27px;
-  @include padding(60px, 132px);
+  @include padding(65px, 120px);
 
   @media (max-width: $desktop-width) {
     row-gap: 20px;
@@ -37,15 +42,47 @@
   }
 }
 
-.inst__link {
+.inst__item {
+  min-width: 230px;
+  max-height: 230px;
+
+  @media (max-width: $desktop-width) {
+    min-width: 133px;
+    max-height: 133px;
+  }
 }
 
 .inst__item--big {
   grid-row: span 2;
+  max-width: 399px;
+  max-height: 412px;
+
+  @media (max-width: $desktop-width) {
+    max-width: 231px;
+    max-height: 240px;
+  }
+}
+
+.inst__item--small {
+  max-height: 150px;
+
+  @media (max-width: $desktop-width) {
+    max-height: 87px;
+  }
 }
 
 .inst__item--no-mobile {
   @media (max-width: $tablet-width) {
     display: none;
   }
+}
+
+.inst__link img {
+  // min-width: 230px;
+  // min-height: 150px;
+  // max-width: 230px;
+  // max-height: 230px;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
