--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -16,7 +16,8 @@
   padding-top: 30px;
 
   @media (max-width: $desktop-width) {
-    padding-top: 17px;
+    // padding-top: 17px;
+    padding-bottom: 12px;
 
     &.page__opened {
       @include pseudo($display: block, $pos: absolute, $content: "");
@@ -49,23 +50,24 @@
 
 .page__logo {
   order: 2;
-  // flex-basis: 70%;
-  margin-left: auto;
-  margin-bottom: 18px;
+  @include push--auto;
+  margin-bottom: 9px;
 
   @media (max-width: $desktop-width) {
-    margin: 0 auto;
+    // width: 66px;
+    // height: 66px;
   }
-}
 
-.page__logo svg {
-  fill: $basic_color;
-  // margin: 0 auto;
-  // display: block;
+  &>svg {
 
-  @media (max-width: $desktop-width) {
-    width: 52px;
-    height: 52px;
+    fill: $basic_color;
+    // margin: 0 auto;
+    // display: block;
+
+    @media (max-width: $desktop-width) {
+      // width: 52px;
+      // height: 52px;
+    }
   }
 }
 
@@ -80,14 +82,14 @@
   display: none;
 
   @media (max-width: $desktop-width) {
-    @include pseudo($display: block, $pos: absolute, $content: "");
+    @include pseudo($display: block, $pos: relative, $content: "");
     height: 20px;
     width: 28px;
     background-color: transparent;
     cursor: pointer;
     border: none;
-    top: 17px;
-    left: 45px;
+    top: 21px;
+    left: 0;
     padding: 0;
 
     &::before {
@@ -96,17 +98,17 @@
       width: 25px;
       height: 2px;
       background-color: $medium_black;
-      box-shadow: 0 5px 0 0 $medium_black, 0 10px 0 0 $medium_black;
+      box-shadow: 0 8px 0 0 $medium_black, 0 16px 0 0 $medium_black;
 
       .page__opened &,
       .page__nojs & {
         background-color: $basic_white;
-        box-shadow: 0 5px 0 0 $basic_white, 0 10px 0 0 $basic_white;
+        box-shadow: 0 8px 0 0 $basic_white, 0 16px 0 0 $basic_white;
       }
     }
   }
 
-  @media (max-width: $desktop-width) {
+  @media (max-width: $tablet-width) {
     top: 15px;
     left: 15px;
   }
@@ -159,7 +161,7 @@
 
 .page__login {
   order: 3;
-  margin-left: auto;
+  margin-left: 60px;
 
   @media (max-width: $desktop-width) {
 
@@ -194,24 +196,19 @@
   @media (max-width: $desktop-width) {
     @include pseudo($display: block, $pos: relative);
     content: url("data:image/svg+xml,%3Csvg width='20' height='18' viewBox='0 0 20 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 5C14 6.06087 13.5786 7.07828 12.8284 7.82843C12.0783 8.57857 11.0609 9 10 9C8.93913 9 7.92172 8.57857 7.17157 7.82843C6.42143 7.07828 6 6.06087 6 5M1 1H19V17H1V1Z' stroke='%231D1613' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
-    width: 19px;
-    height: 18px;
-    top: 2px;
-    left: 2px;
-    margin-left: 0;
+    width: 20px;
+    height: 19px;
+    top: 23px;
+    right: 0;
+    margin-left: 10px;
 
     .page__opened &,
     .page__nojs & {
       content: url("data:image/svg+xml,%3Csvg width='20' height='18' viewBox='0 0 20 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 5C14 6.06087 13.5786 7.07828 12.8284 7.82843C12.0783 8.57857 11.0609 9 10 9C8.93913 9 7.92172 8.57857 7.17157 7.82843C6.42143 7.07828 6 6.06087 6 5M1 1H19V17H1V1Z' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
-      width: 19px;
-      height: 18px;
-      top: 17px;
-      right: 0;
-      left: unset;
     }
   }
 
-  @media (max-width: $desktop-width) {
+  @media (max-width: $tablet-width) {
     top: 15px;
     right: 25px;
   }
@@ -238,16 +235,17 @@
 .page__cart {
   text-decoration: none;
   color: $medium_black;
+  margin-bottom: 50px
 }
 
 .page__footer {
-  @include padding(100px, 100px);
+  @include padding(92px, 100px);
   flex-shrink: 0;
   background-color: $basic_black;
   color: $basic_white;
 
   @media (max-width: $desktop-width) {
-    @include padding(60px, 60px);
+    @include padding(50px, 60px);
   }
 }
 
