--- a/source/sass/blocks/catalog-content.scss
+++ b/source/sass/blocks/catalog-content.scss
@@ -1,12 +1,16 @@
 .catalog-content {
-  @include padding(80px,40px);
+  @include padding(80px,32px);
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 21.3% 3fr;
   grid-gap: 50px;
 
   @media (max-width: $desktop-width) {
     display: flex;
     flex-direction: column;
-    @include padding(50px,40px);
+    @include padding(50px,32px);
+  }
+  @media (max-width: $tablet-width) {
+    @include padding(40px,24px);
+    grid-gap: 40px;
   }
 }
