--- a/source/sass/blocks/img-carousel.scss
+++ b/source/sass/blocks/img-carousel.scss
@@ -5,7 +5,8 @@
   grid-template-rows: repeat(3, 125px);
 
   @media (max-width: $desktop-width) {
-    grid-gap: 14px;
+    column-gap: 14px;
+    row-gap: 5px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(2, auto);
   }
@@ -33,5 +34,14 @@
 
   @media (max-width: $tablet-width) {
     width: 100%;
+    position: relative;
+
+    &::after {
+      @include pseudo($display: block, $pos: absolute, $content: "1 of 4");
+      @include text(14px, 18px, 500);
+      color: $medium_black;
+      right: 45%;
+      bottom: 13px;
+    }
   }
 }
