--- a/source/sass/blocks/inst.scss
+++ b/source/sass/blocks/inst.scss
@@ -26,7 +26,7 @@
   grid-template-columns: 1fr 2fr 1fr 1fr;
   row-gap: 25px;
   column-gap: 27px;
-  @include padding(65px, 120px);
+  @include padding(65px, 132px);
 
   @media (max-width: $desktop-width) {
     row-gap: 20px;
@@ -60,6 +60,11 @@
   @media (max-width: $desktop-width) {
     max-width: 231px;
     max-height: 240px;
+  }
+
+  @media (max-width: $tablet-width) {
+    max-width: 233px;
+    max-height: 247px;
   }
 }
 
