--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -1,40 +1,20 @@
 .socials {
-  // padding-top: 14px;
+  padding-left: 84px;
 
   @media (max-width: $desktop-width) {
     grid-area: socials;
     padding-top: 48px;
-    margin-left: auto;
+    padding-left: 47px;
   }
 
   @media (max-width: $tablet-width) {
-    margin-left: unset;
-    // padding-top: 39px;
+    margin-left: 0;
+    padding-left: 0;
+    padding-top: 0;
   }
 }
 
-// .socials__wrapper {
-//   @media (max-width: $pre-desktop-width) {
-//     width: 100%;
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: space-between;
-//     align-items: center;
-//     padding-bottom: 20px;
-//   }
-
-//   @media (max-width: $tablet-width) {
-//     flex-direction: column;
-//     padding-bottom: 50px;
-//   }
-// }
-
 .socials__list {
-  // display: flex;
-  // flex-direction: row;
-  // flex-wrap: wrap;
-  // margin-top: 46px;
-
   @media (max-width: $tablet-width) {
     display: flex;
     flex-direction: row;
@@ -46,7 +26,11 @@
 
 .socials__item {
   cursor: pointer;
-  padding-bottom: 25px;
+  padding-bottom: 16px;
+
+  @media (max-width: $tablet-width) {
+    padding-bottom: 0;
+  }
 
   &:hover {
     opacity: 0.7;
@@ -62,30 +46,22 @@
   @media (max-width: $tablet-width) {
     font-size: 0;
     padding-right: 20px;
+  }
 
-    & > svg {
+  & > svg {
+    width: 15px;
+    height: 15px;
+    vertical-align: middle;
+
+    @media (max-width: $desktop-width) {
+      margin-right: 10px;
+    }
+
+    @media (max-width: $tablet-width) {
+      margin-right: 7px;
       width: 20px;
       height: 21px;
     }
   }
 }
 
-// .socials__list::before {
-//   @media (max-width: $desktop-width) {
-//     @include pseudo($display: block, $pos: absolute, $content: "1999-2018 SD Service Devices");
-//     @include text(13px, 24px, 400);
-//     letter-spacing: 0.04em;
-//     text-transform: uppercase;
-//     color: $navy_blue;
-//     opacity: 0.5;
-//     font-family: $text-font;
-//     top: 3px;
-//     right: 166.5%;
-//     width: 233px;
-//   }
-
-//   @media (max-width: $tablet-width) {
-//     top: -55px;
-//     right: -56.5%;
-//   }
-// }
