--- a/source/sass/blocks/subscribe.scss
+++ b/source/sass/blocks/subscribe.scss
@@ -1,16 +1,23 @@
 .subscribe {
+  padding-right: 85px;
+
   @media (max-width: $desktop-width) {
     grid-area: sub;
+    padding-right: 0;
   }
 
   &>h2 {
     @include text(34px, 44px, 700);
     letter-spacing: 0.03em;
     margin-bottom: 0;
+
+    @media (max-width: $tablet-width) {
+      padding-right: 45px;
+    }
   }
 
   &>p {
-    @include text(14px, 21px, 400);
+    @include text(16px, 21px, 400);
     color: $basic_grey;
     margin-top: 11px;
     margin-bottom: 35px;
@@ -18,6 +25,11 @@
     @media (max-width: $desktop-width) {
       padding-top: 0;
       margin-bottom: 40px;
+    }
+
+    @media (max-width: $tablet-width) {
+      padding-right: 45px;
+      margin-top: 16px;
     }
   }
 }
@@ -27,6 +39,10 @@
 
   @media (max-width: $desktop-width) {
     padding-right: 63px;
+  }
+
+  @media (max-width: $tablet-width) {
+    padding-right: 0;
   }
 
   &>input {
@@ -39,6 +55,10 @@
 
     @media (max-width: $desktop-width) {
       padding-bottom: 12px;
+    }
+
+    @media (max-width: $tablet-width) {
+      padding-bottom: 9px;
     }
 
     &::placeholder {
@@ -61,6 +81,10 @@
   @media (max-width: $desktop-width) {
     right: 100px;
     bottom: 8px;
+  }
+
+  @media (max-width: $tablet-width) {
+    right: 37px;
   }
 
   &::before {
