--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -41,15 +41,9 @@
 
 .blog__item {
   cursor: pointer;
-  margin-bottom: 30px;
   background-color: $light_grey;
   grid-area: care;
   margin: 0;
-
-  @media (max-width: $desktop-width) {
-    // margin-bottom: 50px;
-    // max-height: 300px;
-  }
 
   &:nth-child(3n+2) {
     grid-area: power;
@@ -81,7 +75,6 @@
 
     @media (max-width: $desktop-width) {
       width: 339px;
-      // height: auto;
     }
 
     @media (max-width: $tablet-width) {
@@ -117,11 +110,9 @@
 .blog__text {
   width: 50%;
   background-color: $light_grey;
-  // @include padding(65px, 70px);
-  padding-top: 65px;
+  @include padding(11%, 10%);
 
   @media (max-width: $desktop-width) {
-    // @include padding(65px, 88px);
     padding-top: 65px;
   }
 
@@ -140,11 +131,15 @@
     color: $basic_black;
     font-family: $caption-font;
     margin-top: 7px;
-    margin-bottom: 35px;
+    margin-bottom: 13%;
+    padding-left: 20%;
+    padding-right: 20%;
+
+    @media (max-width: $desktop-width) {
+      margin-bottom: 11%;
+    }
 
     .blog__item:nth-child(3n+1) & {
-      padding-left: 60px;
-      padding-right: 60px;
 
       @media (max-width: $desktop-width) {
         padding-left: 65px;
@@ -158,8 +153,6 @@
     }
 
     .blog__item:nth-child(3n+2) & {
-      padding-left: 80px;
-      padding-right: 80px;
 
       @media (max-width: $desktop-width) {
         padding-left: 90px;
@@ -184,7 +177,7 @@
   .blog__item:nth-child(3n+3) & {
     position: absolute;
     bottom: 0;
-    padding-bottom: 107px;
+    padding-bottom: 19%;
 
     @media (max-width: $desktop-width) {
       position: relative;
