--- a/source/sass/blocks/inst.scss
+++ b/source/sass/blocks/inst.scss
@@ -42,39 +42,42 @@
   }
 }
 
-.inst__item {
-  min-width: 230px;
-  max-height: 230px;
-
-  @media (max-width: $desktop-width) {
-    min-width: 133px;
-    max-height: 133px;
-  }
-}
-
 .inst__item--big {
   grid-row: span 2;
-  max-width: 399px;
-  max-height: 412px;
-
-  @media (max-width: $desktop-width) {
-    max-width: 231px;
-    max-height: 240px;
-  }
-
-  @media (max-width: $tablet-width) {
-    max-width: 233px;
-    max-height: 247px;
-  }
 }
 
-.inst__item--small {
-  max-height: 150px;
+// .inst__item img {
+//   max-width: 230px;
+//   max-height: 230px;
 
-  @media (max-width: $desktop-width) {
-    max-height: 87px;
-  }
-}
+//   @media (max-width: $desktop-width) {
+//     max-width: 133px;
+//     max-height: 133px;
+//   }
+// }
+
+// .inst__item--big img {
+//   max-width: 399px;
+//   max-height: 412px;
+
+//   @media (max-width: $desktop-width) {
+//     max-width: 231px;
+//     max-height: 240px;
+//   }
+
+//   @media (max-width: $tablet-width) {
+//     max-width: 233px;
+//     max-height: 247px;
+//   }
+// }
+
+// .inst__item--small img {
+//   max-height: 150px;
+
+//   @media (max-width: $desktop-width) {
+//     max-height: 87px;
+//   }
+// }
 
 .inst__item--no-mobile {
   @media (max-width: $tablet-width) {
@@ -83,11 +86,7 @@
 }
 
 .inst__link img {
-  // min-width: 230px;
-  // min-height: 150px;
-  // max-width: 230px;
-  // max-height: 230px;
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  // max-height: 100%;
 }
