--- a/source/sass/blocks/modal-login.scss
+++ b/source/sass/blocks/modal-login.scss
@@ -98,6 +98,7 @@
     border-bottom: 1px solid $medium_black;
     min-height: 30px;
     width: 100%;
+    -webkit-appearance: none;
   }
 
   &::placeholder {
