--- a/source/sass/blocks/modal-login.scss
+++ b/source/sass/blocks/modal-login.scss
@@ -9,9 +9,10 @@
 }
 
 .modal-login__form {
+  @include padding(200px, 60px);
+  @include push--auto;
   background-color: $light_grey;
   color: $basic_grey;
-  @include padding(200px, 60px);
   padding-left: 45px;
   padding-right: 45px;
   max-width: 430px;
@@ -21,8 +22,7 @@
   left: 0;
   right: 0;
   text-align: center;
-  @include push--auto;
-  background-image: url('../img/login-desktop.jpg');
+  background-image: url("../img/login-desktop.jpg");
   background-repeat: no-repeat;
   background-position: center 0;
   background-size: 100% auto;
@@ -44,9 +44,9 @@
   }
 
   @media (max-width: $tablet-width) {
+    @include padding(130px, 45px);
     background-image: url("../img/login-mobile.jpg");
     max-width: 290px;
-    @include padding(130px, 45px);
     padding-left: 15px;
     padding-right: 15px;
     top: 117px;
@@ -98,7 +98,7 @@
     border-bottom: 1px solid $medium_black;
     min-height: 30px;
     width: 100%;
-    -webkit-appearance: none;
+    // -webkit-appearance: none;
     outline: none;
   }
 
