--- a/source/sass/blocks/subscribe.scss
+++ b/source/sass/blocks/subscribe.scss
@@ -45,7 +45,7 @@
     padding-right: 0;
   }
 
-  & > input {
+  & input {
     border: none;
     background-color: transparent;
     border-bottom: 1px solid $basic_white;
