--- a/source/sass/blocks/modal-login.scss
+++ b/source/sass/blocks/modal-login.scss
@@ -17,7 +17,7 @@
   padding-right: 45px;
   max-width: 430px;
   position: absolute;
-  top: 372px;
+  top: 10%;
   z-index: 4;
   left: 0;
   right: 0;
@@ -36,7 +36,7 @@
     padding-left: 51px;
     padding-right: 51px;
     max-width: 442px;
-    top: 258px;
+    // top: 258px;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/login-tablet@2x.jpg");
@@ -49,7 +49,7 @@
     max-width: 290px;
     padding-left: 15px;
     padding-right: 15px;
-    top: 117px;
+    // top: 117px;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/login-mobile@2x.jpg");
