Исправила элементы для сафари

--- a/source/sass/blocks/modal-card.scss
+++ b/source/sass/blocks/modal-card.scss
@@ -119,7 +119,7 @@
     padding-top: 10px;
     padding-bottom: 5px;
 
-    &[value] {
+    &::placeholder {
       @include text(18px, 23px, 400);
       color: $medium_black;
       text-align: center;
