--- a/source/sass/blocks/range.scss
+++ b/source/sass/blocks/range.scss
@@ -26,6 +26,9 @@
   border: none;
   background-color: $basic_color;
   border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -khtml-border-radius: 20px;
+  -moz-border-radius: 20px;
   cursor: pointer;
   top: -8px;
 }
