--- a/source/sass/blocks/subscribe.scss
+++ b/source/sass/blocks/subscribe.scss
@@ -52,6 +52,7 @@
     width: 100%;
     padding-bottom: 15px;
     color: $basic_grey;
+    -webkit-appearance: none;
 
     @media (max-width: $desktop-width) {
       padding-bottom: 12px;
